manifests/deployment-gpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-streaming-gpu
  labels:
    app: cv-streaming
spec:
  selector:
    matchLabels:
      app: cv-streaming
  replicas: 1
  template:
    metadata:
      labels:
        app: cv-streaming
    spec:
      containers:
      - name: frontend
        image: frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8088
      - name: kafka-cv
        image: kafka-cv:gpu
        imagePullPolicy: Always
        resources:
          limits:
            nvidia.com/gpu: '1'
          requests:
            nvidia.com/gpu: '1'

#          volumeMounts:
#            - mountPath: /mnt/kafka-ca-cert
#              name: kafka-ca-cert-volume
#      volumes:
#        - configMap:
#            defaultMode: 420
#            name: kafka-ca-cert
#          name: kafka-ca-cert-volume
