manifests/cv-streaming-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cv-streaming
spec:
  selector:
    app: cv-streaming
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
